common/force-app/main/default/objects/Raise_Team_and_Advisors__c/Raise_Team_and_Advisors__c.object-meta.xml
<CustomObject>
    <label>Raise Team and Advisors</label>
    <nameField>
        <label>Raise Team and Advisors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raise Team and Advisors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>