common/force-app/main/default/objects/Raise_Team_and_Advisors__c/fields/Related_Raise__c.field-meta.xml
<CustomField>
    <fullName>Related_Raise__c</fullName>
    <label>Related Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Raise Team and Advisors</relationshipLabel>
    <relationshipName>Raise_Team_and_Advisors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>