common/force-app/main/default/objects/Raise_Team_and_Advisors__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>